[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/text_system/text_system.gd" type="Script" id=1]
[ext_resource path="res://interface/text_system/Default_theme.tres" type="Theme" id=2]
[ext_resource path="res://interface/text_system/Casual Game GUI_Window - Popup.png" type="Texture" id=3]
[ext_resource path="res://interface/text_system/Button Pack - Gray_Button Gray - Down Arrow.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 690, 130 ), Vector2( 690, 140 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 690, 130 ), Vector2( 690, 140 ) ]
}

[node name="text_system" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
wich_area = 0

[node name="Popup" type="Popup" parent="." index="0"]

visible = false
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -202.0
margin_top = 380.0
margin_right = 198.0
margin_bottom = 520.0
rect_min_size = Vector2( 400, 140 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
popup_exclusive = false
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="DialogueBox" type="NinePatchRect" parent="Popup" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -60.0
margin_right = 280.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
_sections_unfolded = [ "Patch Margin", "Visibility" ]

[node name="Label" type="Label" parent="Popup/DialogueBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 80.0
margin_right = -210.0
margin_bottom = -51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Theme" ]

[node name="NextButton" type="TextureButton" parent="Popup/DialogueBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 780.0
margin_top = 130.0
margin_right = 829.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="Popup/DialogueBox/NextButton" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_top = 18.0
margin_right = 87.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "NEXT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Popup/DialogueBox/NextButton" index="1"]

root_node = NodePath("..")
autoplay = "Moving"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Moving = SubResource( 1 )
blend_times = [  ]

[node name="CloseButtonFinal" type="TextureButton" parent="Popup/DialogueBox" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 780.0
margin_top = 130.0
margin_right = 829.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="Label" type="Label" parent="Popup/DialogueBox/CloseButtonFinal" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_top = 18.0
margin_right = 87.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "NEXT"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Popup/DialogueBox/CloseButtonFinal" index="1"]

root_node = NodePath("..")
autoplay = "Moving"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Moving = SubResource( 2 )
blend_times = [  ]

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="pressed" from="Popup/DialogueBox/NextButton" to="." method="_on_NextButton_pressed"]

[connection signal="pressed" from="Popup/DialogueBox/CloseButtonFinal" to="." method="_on_CloseButtonFinal_pressed"]


